--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.4",
     "expo": "~54.0.33",
     "expo-image-picker": "^17.0.10",
+    "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
