--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,8 +12,17 @@
     "@react-native-community/datetimepicker": "8.4.4",
     "axios": "^1.13.4",
     "expo": "~54.0.33",
+    "expo-constants": "~18.0.13",
+    "expo-contacts": "~15.0.11",
+    "expo-device": "~8.0.10",
+    "expo-haptics": "~15.0.8",
+    "expo-image": "~3.0.11",
     "expo-image-picker": "^17.0.10",
+    "expo-linking": "~8.0.11",
+    "expo-local-authentication": "~17.0.8",
+    "expo-notifications": "~0.32.16",
     "expo-secure-store": "~15.0.8",
+    "expo-sms": "~14.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
